# VCClustering

./: BruteForceImplementation.cpp  BruteForceImplementation.h  CMakeLists.txt  ClusterStructure.h  Dtw.cpp  Dtw.h  GridImplementation.cpp  GridImplementation.h  HashFunctions.cpp  HashFunctions.h  HashPair.h  HashTables.cpp  HashTables.h  Initialization.cpp  Initialization.h  InputImplementation.cpp  InputImplementation.h  InputImplementatition.cpp  InputImplementatition.h  LICENSE  Makefile  README.md  cluster.conf  clustering_curves.cpp  clustering_curves.h  clustering_vectors.cpp  clustering_vectors.h  k_means_vectors.cpp  k_means_vectors.h  kmeansPlusPlus.cpp  kmeansPlusPlus.h  main.cpp  main2.cpp  temp.cpp  utilities.cpp  utilities.h
curves/: Dtw.cpp  Dtw.h  InitializationCurves.cpp  InitializationCurves.h  main.cpp
lib/googletest-master/googlemock/include/gmock/: gmock-actions.h  gmock-generated-actions.h  gmock-matchers.h
lib/googletest-master/googlemock/src/: gmock_main.cc
lib/googletest-master/googlemock/test/: gmock-actions_test.cc  gmock-function-mocker_test.cc  gmock-generated-actions_test.cc  gmock-generated-function-mockers_test.cc  gmock-generated-matchers_test.cc  gmock-matchers_test.cc
lib/googletest-master/googletest/src/: gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest.cc  gtest_main.cc
lib/googletest-master/googletest/test/: googletest-death-test-test.cc  googletest-output-test.py  googletest-output-test_.cc  googletest-port-test.cc  googletest-printers-test.cc  gtest-typed-test_test.cc  gtest_unittest.cc
(+4 files in other folders)
